@@ -1,0 +1,79 @@
+<?xml version="1.0"?>
+<device>
+
+  <dlna_version>none</dlna_version>
+  <enable_url_base>true</enable_url_base>
+  <!--<enable_xms_media_receiver_registrar>true</enable_xms_media_receiver_registrar>-->
+  <show_device_icon>true</show_device_icon>
+
+  <description_values>
+    <manufacturer>DENON</manufacturer>
+    <manufacturer_url>http://www.denon.com</manufacturer_url>
+    <model_name>AVR-4306</model_name>
+    <model_number>4306</model_number>
+    <model_url>http://www.denon.com</model_url>
+    <model_description enabled="false" />
+    <upc enabled="true"></upc>
+    <serial_number enabled="false" />
+  </description_values>
+
+  <file_settings>
+
+    <!--audio files-->
+    <file ext="mp3">
+      <type>AUDIO_ITEM</type>
+      <mime_type>audio/mpeg</mime_type>
+    </file>
+
+    <file ext="mpc">
+      <type>AUDIO_ITEM</type>
+      <mime_type>application/octet-stream</mime_type>
+      <transcode enabled="true">
+        <ext>mp3</ext>
+        <mime_type>audio/mpeg</mime_type>
+        <!--<dlna>MP3</dlna>-->
+        <!--<http_encoding>chunked</http_encoding>-->
+        <decoder>musepack</decoder>
+        <encoder>lame</encoder>
+        <bitrate>320</bitrate>
+        <samplerate>44100</samplerate>
+      </transcode>
+    </file>
+
+    <file ext="wav">
+      <type>AUDIO_ITEM</type>
+      <mime_type>audio/x-wav</mime_type>
+    </file>
+
+    <file ext="flac">
+      <type>AUDIO_ITEM</type>
+      <mime_type>audio/x-flac</mime_type>
+      <transcode enabled="true">
+        <ext>mp3</ext>
+        <mime_type>audio/mpeg</mime_type>
+        <!--<dlna>MP3</dlna>-->
+        <!--<http_encoding>chunked</http_encoding>-->
+        <decoder>flac</decoder>
+        <encoder>lame</encoder>
+        <bitrate>320</bitrate>
+        <samplerate>44100</samplerate>
+      </transcode>
+    </file>
+
+    <file ext="wma">
+      <type>AUDIO_ITEM</type>
+      <mime_type>audio/x-ms-wma</mime_type>
+    </file>
+
+    <!--playlists-->
+    <file ext="pls">
+      <type>PLAYLIST</type>
+      <mime_type>audio/x-scpls</mime_type>
+    </file>
+    <file ext="m3u">
+      <type>PLAYLIST</type>
+      <mime_type>audio/x-mpegurl</mime_type>
+    </file>
+
+  </file_settings>
+</device>
